# multi-party-sig-cpp

./: .gitignore  CMakeLists.txt  GoogleTest-Installation.md  LICENSE  OpenSSL-Installation.md  Protocol-Buffers-Installation.md  README.md
src/: CMakeLists.txt
src/mpc-flow/common/: sid_maker.h
src/mpc-flow/mpc-parallel/: LazyBCValidator.cpp  LazyBCValidator.h  mpc_context.h  mpc_round.cpp
src/mpc-flow/mpc-parallel-v2/: message_type.h  mpc_context.h  mpc_round.cpp
src/multi-party-ecdsa/: CMakeLists.txt
src/multi-party-ecdsa/cmp/: cmp.h  minimal_party.h  minimal_party_local.cpp  minimal_party_remote.cpp  minimal_sign_key.cpp  minimal_sign_key.h  party.h  party_local.cpp  party_remote.cpp  sign_key.cpp  sign_key.h  util.cpp  util.h
src/multi-party-ecdsa/cmp/aux_info_key_refresh/: context.cpp  context.h  message.h  round0.cpp  round0.h  round0_bc_message.cpp  round1.cpp  round1.h  round1_bc_message.cpp  round2.cpp  round2.h  round2_p2p_message.cpp  round3.cpp  round3.h  t_party.h
src/multi-party-ecdsa/cmp/aux_info_key_refresh/proto_gen/: aux_info_key_refresh.pb.switch.h
src/multi-party-ecdsa/cmp/key_gen/: context.h  round0.h  round1_6.cpp  round1_6.h  t_party.h
src/multi-party-ecdsa/cmp/key_recovery/: context.cpp  context.h  message.h  round0.cpp  round0.h  round0_bc_message.cpp  round0_p2p_message.cpp  round1.cpp  round1.h  round1_bc_message.cpp  round1_p2p_message.cpp  round2.cpp  round2.h  round2_bc_message.cpp  round2_p2p_message.cpp  round3.cpp  round3.h  t_party.h
src/multi-party-ecdsa/cmp/key_recovery/proto_gen/: key_recovery.pb.switch.h
src/multi-party-ecdsa/cmp/minimal_key_gen/: context.cpp  context.h  message.h  round0.cpp  round0.h  round0_bc_message.cpp  round1.cpp  round1.h  round1_bc_message.cpp  round1_p2p_message.cpp  round2.cpp  round2.h  round2_bc_message.cpp  round3.cpp  round3.h  t_party.h
src/multi-party-ecdsa/cmp/proto_gen/: struct.pb.switch.h
src/multi-party-ecdsa/cmp/proto_gen/3_14/: struct.pb.cc  struct.pb.h
src/multi-party-ecdsa/cmp/proto_gen/3_20/: struct.pb.cc  struct.pb.h
src/multi-party-ecdsa/cmp/sign/: auxiliary.cpp  auxiliary.h  context.cpp  context.h  identification.h  message.h  proof_in_presign_phase.cpp  proof_in_sign_phase.cpp  round0.cpp  round0.h  round0_bc_message.cpp  round0_p2p_message.cpp  round1.cpp  round1.h  round1_p2p_message.cpp  round2.cpp  round2.h  round2_p2p_message.cpp  round3.cpp  round3.h  round3_p2p_message.cpp  round4.cpp  round4.h  security_param.h  t_party.h
src/multi-party-ecdsa/gg18/: gg18.h  party.h  party_local.cpp  party_remote.cpp  sign_key.cpp  util.cpp  util.h
src/multi-party-ecdsa/gg18/key_gen/: context.cpp  context.h  message.h  round0.cpp  round0.h  round0_bc_message.cpp  round1.cpp  round1.h  round1_bc_message.cpp  round1_p2p_message.cpp  round2.cpp  round2.h  round2_bc_message2.cpp  round3.cpp  round3.h  t_party.h
src/multi-party-ecdsa/gg18/key_gen/proto_gen/: key_gen.pb.switch.cc  key_gen.pb.switch.h
src/multi-party-ecdsa/gg18/key_refresh/: context.cpp  context.h  message.h  round0.cpp  round0.h  round0_bc_message.cpp  round1.cpp  round1.h  round1_bc_message.cpp  round1_p2p_message.cpp  round2.cpp  round2.h  round2_p2p_message.cpp  round3.cpp  round3.h  round3_bc_message.cpp  round4.cpp  round4.h  t_party.h
src/multi-party-ecdsa/gg18/key_refresh/proto_gen/: key_refresh.pb.switch.cc
src/multi-party-ecdsa/gg18/proto_gen/3_14/: struct.pb.h
src/multi-party-ecdsa/gg18/proto_gen/3_20/: struct.pb.cc  (+1 more)
src/multi-party-ecdsa/gg18/sign/: context.cpp  context.h  message.h  mta.cpp  mta.h  round0.cpp  round0.h  round0_bc_message.cpp  round0_p2p_message.cpp  round1.cpp  round1.h  round1_p2p_message.cpp  round2.cpp  round2.h  round2_bc_message.cpp  round3.cpp  round3.h  round3_bc_message.cpp  round4.cpp  round4.h  round4_bc_message.cpp  round5.cpp  round5.h  round5_bc_message.cpp  round6.cpp  round6.h  round6_bc_message.cpp  round7.cpp  round7.h  round7_bc_message.cpp  round8.cpp  round8.h  round8_bc_message.cpp  round9.cpp  round9.h  t_party.h
src/multi-party-ecdsa/gg20/sign/: context.cpp  context.h  message.h  round0.cpp  round0.h  round0_bc_message.cpp  round0_p2p_message.cpp  round1.cpp  round1.h  round1_p2p_message.cpp  round2.cpp  round2.h  round2_bc_message.cpp  round3.cpp  round3.h  round3_bc_message.cpp  round4.cpp  round4.h  round4_bc_message.cpp  round4_p2p_message.cpp  round5.cpp  round5.h  round5_bc_message.cpp  round6.cpp  round6.h  round6_bc_message.cpp  round7.cpp  round7.h  t_party.h
src/multi-party-sig/mpc-flow/: CMakeLists.txt
src/multi-party-sig/mpc-flow/common/: sid_maker.cpp
src/multi-party-sig/mpc-flow/mpc-parallel/: LazyBCValidator.cpp  error_info.h  mpc_context.cpp  mpc_context.h  mpc_round.cpp  mpc_round.h
src/multi-party-sig/mpc-flow/mpc-parallel-v2/: error_info.h  mpc_context.cpp  mpc_context.h  mpc_round.cpp  mpc_round.h
src/multi-party-sig/multi-party-ecdsa/cmp/: cmp.h  minimal_party.h  minimal_party_local.cpp  minimal_party_remote.cpp  minimal_sign_key.cpp  minimal_sign_key.h  party.h  party_local.cpp  party_remote.cpp  sign_key.cpp  sign_key.h  util.cpp  util.h
src/multi-party-sig/multi-party-ecdsa/gg18/: gg18.h  party.h  party_local.cpp  party_remote.cpp  sign_key.cpp  sign_key.h  util.cpp  util.h
src/multi-party-sig/multi-party-ecdsa/gg20/: gg20.h
src/multi-party-sig/two-party-ecdsa/: CMakeLists.txt
src/multi-party-sig/two-party-ecdsa/lindell17/: P1KeyShare.cpp  P1KeyShare.h  P2KeyShare.cpp  P2KeyShare.h  util.cpp  util.h
test/: CMakeLists.txt  CTimer.cpp  CTimer.h  message.h  party_message_queue.h  thread_safe_queue.h
test/cmp/: aux_info_key_refresh_mt_test.cpp  aux_info_key_refresh_test.cpp  key_gen_test.cpp  key_recovery_test.cpp  minimal_key_gen_mt_test.cpp  minimal_key_gen_test.cpp  sign_n_n_mt_test.cpp  sign_t_n_mt_test.cpp  sign_test.cpp
test/gg18/: key_gen_mt_test.cpp  key_gen_test.cpp  key_refresh_mt_test.cpp  key_refresh_test.cpp  sign_n_n_mt_test.cpp  sign_t_n_mt_test.cpp  sign_test.cpp
test/gg20/: sign_n_n_mt_test.cpp  sign_t_n_mt_test.cpp  sign_test.cpp
test/lindell17/: key-gen-test.cpp  sign-test.cpp
(+291 files in other folders)
